# yahboom_rosmaster_x3plus

./: .gitignore
Log/: OrbbecSDK.log.txt
src/yahboom_rosmaster/: README.md
src/yahboom_rosmaster/arm_moveit_demo/: CMakeLists.txt  package.xml
src/yahboom_rosmaster/arm_moveit_demo/include/arm_moveit_demo/: moveit_demo_utils.hpp
src/yahboom_rosmaster/arm_moveit_demo/launch/: x3plus_moveit_demo.launch.py
src/yahboom_rosmaster/arm_moveit_demo/src/: 01_random_move.cpp  02_set_pose_plan.cpp  03_set_joint_plan.cpp  04_cartesian.cpp  05_attached_object.cpp  06_multi_track_motion.cpp
src/yahboom_rosmaster/gemini_pick_place_executor/: CMakeLists.txt  package.xml
src/yahboom_rosmaster/gemini_pick_place_executor/config/: moveit_cpp.yaml
src/yahboom_rosmaster/gemini_pick_place_executor/launch/: executor.launch.py
src/yahboom_rosmaster/gemini_pick_place_executor/scripts/: gemini_pick_place_executor.py
src/yahboom_rosmaster/gemini_pick_place_executor/src/: pick_place_manipulation_server.cpp
src/yahboom_rosmaster/gemini_robotics_bridge/: CMakeLists.txt  package.xml
src/yahboom_rosmaster/gemini_robotics_bridge/prompts/: gemini_pick_place_retry.txt  gemini_pick_place_system.txt  gemini_verify_pick.txt
src/yahboom_rosmaster/gemini_robotics_bridge/scripts/: gemini_robotics_bridge.py
src/yahboom_rosmaster/mecanum_drive_controller/src/: mecanum_drive_controller.cpp
src/yahboom_rosmaster/x3plus_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/yahboom_rosmaster/x3plus_moveit_config/config/: initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ros2_controllers.yaml  rosmaster_x3_plus.ros2_control.xacro  rosmaster_x3_plus.srdf  rosmaster_x3_plus.urdf.xacro  sensors_3d.yaml
src/yahboom_rosmaster/x3plus_moveit_config/launch/: demo.launch.py  gazebo_moveit.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/yahboom_rosmaster/x3plus_moveit_config/scripts/: filter_moveit_joint_states.py  perception_bridge.py  publish_tabletop_scene.py
src/yahboom_rosmaster/x3plus_moveit_config/src/: reachability_cloud_publisher.cpp
src/yahboom_rosmaster/yahboom_rosmaster/: package.xml
src/yahboom_rosmaster/yahboom_rosmaster_bringup/launch/: load_ros2_controllers.launch.py
src/yahboom_rosmaster/yahboom_rosmaster_bringup/scripts/: rosmaster_x3_navigation.sh
src/yahboom_rosmaster/yahboom_rosmaster_description/: package.xml
src/yahboom_rosmaster/yahboom_rosmaster_description/config/rosmaster_x3_plus/: ros2_controllers.yaml  ros2_controllers_template.yaml
src/yahboom_rosmaster/yahboom_rosmaster_description/launch/: robot_state_publisher.launch.py
src/yahboom_rosmaster/yahboom_rosmaster_description/urdf/control/: gz_odom_publisher.urdf.xacro  rosmaster_x3_plus_ros2_control.urdf.xacro
src/yahboom_rosmaster/yahboom_rosmaster_description/urdf/mech/: mecanum_wheel.urdf.xacro  rosmaster_x3_plus_arm.urdf.xacro
src/yahboom_rosmaster/yahboom_rosmaster_description/urdf/robots/: rosmaster_x3_plus.urdf.xacro
src/yahboom_rosmaster/yahboom_rosmaster_gazebo/config/: ros_gz_bridge.yaml
src/yahboom_rosmaster/yahboom_rosmaster_gazebo/launch/: yahboom_rosmaster.gazebo.launch.py
src/yahboom_rosmaster/yahboom_rosmaster_gazebo/worlds/: tabletop_can_bin.world
src/yahboom_rosmaster/yahboom_rosmaster_msgs/: CMakeLists.txt  package.xml
src/yahboom_rosmaster/yahboom_rosmaster_msgs/action/: PickPlaceManipulation.action
src/yahboom_rosmaster/yahboom_rosmaster_msgs/srv/: GeminiPickPlace.srv  GeminiVerifyPick.srv  ProjectDetectionBox.srv
src/yahboom_rosmasterX3plus/mecanum_drive_controller/: CMakeLists.txt
src/yahboom_rosmasterX3plus/mecanum_drive_controller/include/mecanum_drive_controller/: mecanum_drive_controller.hpp
src/yahboom_rosmasterX3plus/yahboom_rosmaster_description/: CMakeLists.txt
src/yahboom_rosmasterX3plus/yahboom_rosmaster_description/config/rosmaster_x3_plus/: ros2_controllers.yaml
src/yahboom_rosmasterX3plus/yahboom_rosmaster_description/urdf/control/: rosmaster_x3_plus_ros2_control.urdf.xacro
src/yahboom_rosmasterX3plus/yahboom_rosmaster_description/urdf/mech/: rosmaster_x3_plus_arm.urdf.xacro
src/yahboom_rosmasterX3plus/yahboom_rosmaster_description/urdf/robots/: rosmaster_x3_plus.urdf.xacro
src/yahboom_rosmasterX3plus/yahboom_rosmaster_gazebo/launch/: rosmaster_x3_plus.gazebo.launch.py
src/yahboom_rosmasterX3plus/yahboom_rosmaster_gazebo/rviz/: rosmaster_x3_plus_gazebo_sim.rviz
src/yahboom_rosmasterX3plus/yahboom_rosmaster_navigation/: CMakeLists.txt
src/yahboom_rosmasterX3plus/yahboom_rosmaster_navigation/scripts/: x3_plus_servo_dance.py
