<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gemini_pick_place_executor</name>
  <version>0.0.0</version>
  <description>Debug executor that projects Gemini pick-and-place image points into 3D markers.</description>
  <maintainer email="dnmilstein@miuandes.cl">Daniel Milstein</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>yahboom_rosmaster_msgs</exec_depend>
  <exec_depend>moveit_py</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>x3plus_moveit_config</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
